--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -149,7 +149,7 @@
                 </select>
             </div>
         </div>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block" id="submit">Submit</button>
         <hr class="my-4">
     </div>
 
@@ -165,12 +165,62 @@
         }
     </style>
 
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
+
+    <script type="text/javascript">
+
+        $("#submit").on("click", function (event) {
+            event.preventDefault();
+
+            let newFriend = {
+                name: $("#nameInput").val().trim(),
+                photo: $("#linkInput").val().trim(),
+                score: [
+                    $("#question1").val().trim(),
+                    $("#question2").val().trim(),
+                    $("#question3").val().trim(),
+                    $("#question4").val().trim(),
+                    $("#question5").val().trim(),
+                    $("#question6").val().trim(),
+                    $("#question7").val().trim(),
+                    $("#question8").val().trim(),
+                    $("#question9").val().trim(),
+                    $("#question10").val().trim()
+                ]
+            };
+
+            $("#nameInput").val("");
+            $("#linkInput").val("");
+            $("#question1").val("");
+            $("#question2").val("");
+            $("#question3").val("");
+            $("#question4").val("");
+            $("#question5").val("");
+            $("#question6").val("");
+            $("#question7").val("");
+            $("#question8").val("");
+            $("#question9").val("");
+            $("#question10").val("");
+
+            console.log(newFriend);
+
+            $.post("/api/friends", newFriend)
+                .then(function(data){
+                    console.log("---" + data)
+                });
+
+        });
+
+
+    </script>
 </body>
 
 </html>
