working on math

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,7 @@
     </div>
     <div class= "container">
     <div class="footer">
-        <p><a href="#">API Friends List</a> | <a href="#">GitHub Repo</a>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/AngelMD55/FriendFinder.git">GitHub Repo</a>
     </div>
 </div>
 
